fixed some headers being the same font size on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,19 @@
       font-size: 36px;
     }
   
-    h3, h4 {
+    h1{
+      font-size: 54px;
+    }
+  
+    h2 {
+      font-size: 48px;
+    }
+  
+    h3 {
+      font-size: 44px;
+    }
+  
+    h4 {
       font-size: 42px;
     }
   
